--- a/src/main/resources/templates/list.html
+++ b/src/main/resources/templates/list.html
@@ -22,6 +22,13 @@
             font-weight: 800;
         }
 
+          #preview>img {
+            width: 200px;
+            height: 200px;
+            border: 1px solid gray;
+            margin : 2px;
+        }
+
 
 
     </style>
@@ -152,52 +159,55 @@
 <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-xl">
         <div class="modal-content">
-            <form action="/post" method="post" enctype="multipart/form-data">
-                <div class="modal-header" style="height : 40px;">
-                    <span class="modal-title" id="exampleModalLabel" style="font-weight: 600;">새 게시물</span>
-                    <button type="submit" class="btn btn-primary add_product_btn">등록</button>
-                </div>
+
+            <div class="modal-header" style="height : 40px;">
+                <span class="modal-title" id="exampleModalLabel" style="font-weight: 600;">새 게시물</span>
+
+            </div>
 
 
 
-                <div class="modal-body" style="display : flex; justify-content: center;">
+            <div class="modal-body" style="display : flex; justify-content: center;">
+                <section class="product_img_block" style="display : fixed;width : 10px;">
+                    <div class="product_img">
+                        <div class="upload-box" style="position : relative;left :10px;top : 40px;width : 500px;height : 500px;z-index:999;">
+                            <div class="plus">+</div>
+                        </div>
+                    </div>
+                </section>
+                <form action="/post" method="post" enctype="multipart/form-data">
+                    <div style="display : flex;">
+                        <div class="form-group" style="display : flex; flex-direction: column;">
+                            <input class="form-control" type="file" id="formFile" name="files" multiple>
 
-                    <div class="form-group" style="display : flex; flex-direction: column;">
-                        <input class="form-control" type="file" id="formFile" name="files" multiple>
 
-                        <section class="product_img_block">
-                            <div class="product_img">
-                                <div class="upload-box">
-                                    <div class="plus">+</div>
-                                </div>
+
+                            <div style="width : 500px; height : 500px;">
+                                <div id="preview" style="width : 500px;height : 500px;"></div>
                             </div>
-                        </section>
-
-                        <div>
-                            <label>PREVIEW</label>
-                            <div id="preview"></div>
-                        </div>
-                    </div>
-
-                    <div>
-                        <div class="form-group" style="height : 38px;">
-                            <img th:src="${#authentication.getPrincipal().getUser().getProfile()}" style="width:22px;height:22px;border-radius:50%;" />
-                            <label for="nickname"></label>
-                            <input type="text" id="nickname" name="nickname" th:value="${#authentication.getPrincipal().getUser().getNickname()}" style="border : 1px solid white;"readonly/>
-                            <input type="text" id="email" name="email" th:value="${#authentication.getPrincipal().getUser().getEmail()}" style="border : 1px solid white; color : gray;"readonly/>
-
                         </div>
 
-                        <div class="form-group">
-                            <textarea name="content" rows="4" style="width : 300px;height : 300px;" required></textarea>
-                        </div>
+                        <div style="margin-left : 60px;">
+                            <div class="form-group" style="height : 49px;">
+                                <img th:src="${#authentication.getPrincipal().getUser().getProfile()}" style="width:22px;height:22px;border-radius:50%;" />
+                                <label for="nickname"></label>
+                                <input type="text" id="nickname" name="nickname" th:value="${#authentication.getPrincipal().getUser().getNickname()}" style="border : 1px solid white;"readonly/>
 
-                        <div class="modal-footer">
+                            </div>
+
+                            <div class="form-group">
+                                <textarea name="content" rows="4" style="width : 300px;height : 300px;" required></textarea>
+                            </div>
 
                         </div>
                     </div>
-                </div>
-            </form>
+                    <div class="modal-footer" style="margin-top : 20px;">
+                        <button type="submit" class="btn btn-primary add_product_btn">등록</button>
+                    </div>
+                </form>
+
+            </div>
+
         </div>
     </div>
 </div>
@@ -410,6 +420,25 @@ uploadBox_el.addEventListener('drop',function(e){
     formData.append('files',file);
 
 });
+
+const add_product_btn_el = document.querySelector('.add_product_btn');
+		add_product_btn_el.addEventListener('click',function(){
+			const title =	document.imageform.title.value;
+			const content = document.imageform.content.value;
+
+			formData.append('title',title);
+			formData.append('content',content);
+
+
+			axios.post('/imageboard/add',formData,	{headers: {'Content-Type' : 'multipart/form-data' } }   )
+			.then(response =>{
+				alert("SUCCESS");
+				location.href="/imageboard/list";
+			})
+			.catch(error =>{alert("FAIL");})
+
+
+		})
 </script>
 
 
