상세조회 넘어가긴하는데 수정필요

--- a/src/main/resources/templates/list.html
+++ b/src/main/resources/templates/list.html
@@ -178,7 +178,8 @@
                 <form onsubmit="return false" name="imageform" >
                     <div style="display : flex;">
                         <div class="form-group" style="display : flex; flex-direction: column;">
-                            <input class="form-control" type="file" id="formFile" name="files" style="z-index : 80;"multiple>
+<!--                            <input class="form-control" type="file" id="fileInput" name="files" style="z-index : 80;" multiple>-->
+
 
 
 
@@ -438,6 +439,8 @@ const add_product_btn_el = document.querySelector('.add_product_btn');
 
 		})
 </script>
+
+
 
 
 
