--- a/src/main/resources/templates/profile/update.html
+++ b/src/main/resources/templates/profile/update.html
@@ -259,7 +259,7 @@
         </div>
 
 
-        <form action="/profile/update" method="POST">
+        <form id="profileForm" >
             <span for="emailInput" style="margin-right : 35px;">이메일</span>
             <span sec:authentication="principal.username">abc@acb.com</span>
             <br/>
@@ -371,32 +371,32 @@
 
 </script>
 
-<script src="//t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
-<script>
+<!--<script src="//t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>-->
+<!--<script>-->
 
-    const search_addr_btn = document.querySelector('.search_addr_btn');
-    search_addr_btn.addEventListener('click',function(){
-       new daum.Postcode({
-                oncomplete: function(data) {
-                    console.log(data);
-                    const zipcode = document.querySelector('.zipcode');
-                    const addr1 = document.querySelector('.addr1');
+<!--    const search_addr_btn = document.querySelector('.search_addr_btn');-->
+<!--    search_addr_btn.addEventListener('click',function(){-->
+<!--       new daum.Postcode({-->
+<!--                oncomplete: function(data) {-->
+<!--                    console.log(data);-->
+<!--                    const zipcode = document.querySelector('.zipcode');-->
+<!--                    const addr1 = document.querySelector('.addr1');-->
 
-                    if(data.userSelectedType==='R')
-                    {
-                        addr1.value = data.roadAddress;
-                    }
-                    else
-                    {
-                        addr1.value = data.jibunAddress;
-                    }
-                    zipcode.value=data.zonecode;
+<!--                    if(data.userSelectedType==='R')-->
+<!--                    {-->
+<!--                        addr1.value = data.roadAddress;-->
+<!--                    }-->
+<!--                    else-->
+<!--                    {-->
+<!--                        addr1.value = data.jibunAddress;-->
+<!--                    }-->
+<!--                    zipcode.value=data.zonecode;-->
 
-                }
-            }).open();
+<!--                }-->
+<!--            }).open();-->
 
-    });
-</script>
+<!--    });-->
+<!--</script>-->
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.5.1/axios.min.js" integrity="sha512-emSwuKiMyYedRwflbZB2ghzX8Cw8fmNVgZ6yQNNXXagFzFOaQmbvQ1vmDkddHjm5AITcBIZfC7k4ShQSjgPAmQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 <script>
@@ -417,39 +417,30 @@
 </script>
 
 <script>
-    // 프로필 업데이트 함수
+    // HTML 폼 요소를 찾아서 변수에 할당
+    const profileForm = document.getElementById('profileForm');
 
-    function updateProfile() {
-        const nickname = document.getElementById('nickname').value;
-        const newPhone = document.getElementById('phoneInput').value;
-        const newZipcode = document.getElementById('zipcode').value;
-        const newAddr1 = document.getElementById('addr1').value;
-        const newAddr2 = document.getElementById('addr2').value;
+    // 폼 제출 이벤트 리스너를 추가
+    profileForm.addEventListener('submit', function (event) {
 
-        const requestBody = {
-            nickname: nickname,
-            phone: newPhone,
-            zipcode: newZipcode,
-            addr1: newAddr1,
-            addr2: newAddr2
-        };
+        // FormData 객체를 사용하여 폼 데이터 수집
+        const formData = new FormData(profileForm);
 
-        // 서버에 비동기 요청을 보냅니다.
-        axios.post('/profile/update', requestBody)
+        // Axios를 사용하여 POST 요청을 서버에 보냄
+        axios.post('/profile/update', formData, { headers: { 'Content-Type': 'multipart/form-data' } })
             .then(response => {
-                console.log('프로필이 성공적으로 업데이트되었습니다.', response);
-                // 여기에서 추가적인 동작을 수행할 수 있습니다.
+                // 성공적으로 요청이 처리된 후 실행되는 코드
+                console.log(response);
+
+    window.location.href = '/login'; // 로그인 페이지로 리디렉션
+    alert('프로필 업데이트가 성공했습니다.');
+
             })
             .catch(error => {
-                alert('프로필 업데이트 중 오류가 발생했습니다: ' + error.message);
-                console.error('프로필 업데이트 중 오류 발생:', error);
+                // 요청이 실패한 경우 실행되는 코드
+                console.error(error);
             });
-    }
-
-    // 프로필 업데이트 버튼 클릭 이벤트에 updateProfile 함수를 연결합니다.
-    const updateButton = document.getElementById('updateButton');
-    updateButton.addEventListener('click', updateProfile);
-
+    });
 </script>
 
 <script>
