--- a/src/main/resources/templates/read.html
+++ b/src/main/resources/templates/read.html
@@ -220,13 +220,7 @@
 
 
                 <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel" >
-<!--                  <div class="carousel-indicators" style="background-color : gray;">-->
-<!--                    <th:block th:each="file, status : ${files}">-->
-<!--                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>-->
-<!--&lt;!&ndash;                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>&ndash;&gt;-->
-<!--&lt;!&ndash;                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>&ndash;&gt;-->
-<!--                    </th:block>-->
-<!--                  </div>-->
+
                   <div class="carousel-inner">
 
                     <th:block th:each="file, status : ${files}">
@@ -239,11 +233,11 @@
                     </th:block>
 
                   </div>
-                  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev" style="background-color : gray;height : 50px;margin-top : 325px;border-radius : 10px;">
+                  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev" style="background-color : gray;width : 40px;height : 50px;margin-top : 325px;border-radius : 10px;">
                     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                     <span class="visually-hidden">Previous</span>
                   </button>
-                  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next" style="background-color : gray;height : 50px;margin-top : 325px;border-radius : 10px;">
+                  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next" style="background-color : gray;width : 40px;height : 50px;margin-top : 325px;border-radius : 10px;">
                     <span class="carousel-control-next-icon" aria-hidden="true"></span>
                     <span class="visually-hidden">Next</span>
                   </button>
