--- a/src/main/resources/templates/read.html
+++ b/src/main/resources/templates/read.html
@@ -203,7 +203,7 @@
 
           <div class="idbox" style="width : 585px;">
             <div>
-              <img th:src="${#authentication.getPrincipal().getUser().getProfile()}" style="width:30px;height:30px;border-radius:50%;" />
+              <img th:src="${profile}" style="width:30px;height:30px;border-radius:50%;" />
               <div id = board_id th:text="${board.nickname}">id</div>|
               <div class="date" th:text="${board.date}">date</div>
             </div>
