--- a/src/main/resources/templates/profile/update.html
+++ b/src/main/resources/templates/profile/update.html
@@ -303,7 +303,7 @@
         </form>
 
         <div class="out">
-            <a href="/profile/leave_auth">회원탈퇴</a>
+            <a href="/user/withdraw">회원탈퇴</a>
         </div>
 
     </div>
