--- a/src/main/resources/templates/search-contents.html
+++ b/src/main/resources/templates/search-contents.html
@@ -205,7 +205,7 @@
 
                     <div class="idbox">
                         <div>
-                            <img th:src="${#authentication.getPrincipal().getUser().getProfile()}" style="width:30px;height:30px;border-radius:50%;" />
+                            <img th:src="${profile}" style="width:30px;height:30px;border-radius:50%;" />
                             <div id = board_id th:text="${board.nickname}">id</div>|
                             <div class="date" th:text="${board.date}">date</div>
                         </div>
