--- a/src/main/resources/templates/profile/leave_auth.html
+++ b/src/main/resources/templates/profile/leave_auth.html
@@ -25,6 +25,7 @@
 
        main>.container{
            margin-top : 100px;
+           margin-right : 100px;
            display : flex;
            flex-direction: column;
            align-items: center;
